backend/incidents/resolve/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: incident-resolve-ingress
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: incident-resolve.devopsinsiders.online
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: agentic-incident-resolve
            port: 
              number: 80
